--- a/src/App.css
+++ b/src/App.css
@@ -134,6 +134,20 @@ body{
   height: 100%;
 }
 
+.empty-chat-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.empty-chat-container > h1{
+  color: var(--text-color-3);
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+
 /* ------------------- Chats List Header ------------------- */
 
 .header-user-info{
@@ -274,19 +288,47 @@ body{
   display: flex;
   align-items: center;
   padding-left: 16px;
-  gap: 20px;
+  gap: 10px;
 }
 
-.active-chat-header-info > img{
+.active-chat-header-info > svg{
+  color: var(--text-color-1);
+  height: 100%;
+  cursor: pointer;
+}
+
+.active-chat-header-info > div{
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  cursor: pointer;
+}
+
+.active-chat-header-info > div > img{
   width: 40px;
   height: 40px;
   object-fit: cover;
   border-radius: 50%;
 }
 
-.active-chat-header-info > h2{
+.active-chat-header-info > div > h2{
   color: var(--text-color-1);
   font-size: 20px;
+}
+
+.active-chat-header-info > div:hover + .active-chat-header-info > div > h2{
+  text-decoration: underline;
+}
+
+.active-chat-header > div:last-of-type{
+  padding-right: 16px;
+  display: flex;
+  align-items: center;
+}
+
+.active-chat-header > div:last-of-type > svg{
+  color: red;
+  cursor: pointer;
 }
 
 /* ------------------- Active Chat Messages ------------------- */
@@ -408,6 +450,16 @@ body{
   color: var(--text-color-1);
 }
 
+.blocked-message{
+  width: 100%;
+  background-color: var(--bg-color-3);
+  color: var(--text-color-3);
+  font-size: 16px;
+  text-align: center;
+  padding: 16px;
+  border-radius: 5px;
+}
+
 /* ------------------- Add user ------------------- */
 
 .pg-overlay{
@@ -508,4 +560,20 @@ body{
   padding: 5px;
   border-radius: 5px;
   cursor: pointer;
+}
+
+/* ------------------- User Info ------------------- */
+
+.user-info-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 16px;
+}
+
+.user-info-container > img{
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  border-radius: 50%;
 }
