--- a/src/App.css
+++ b/src/App.css
@@ -5,18 +5,64 @@
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-:root{
+[data-theme='carbon']{
   --bg-color-1: #1F1F22;
   --bg-color-2: #1A1A1E;
   --bg-color-3: #26272D;
-  --bg-color-4: #5A189A;
-  --active-chat-color: #CCDBDC;
+  --bg-color-4: rgba(126,18,241,1);
+  --bg-color-5: rgba(238,29,232,1); 
+  --bg-color-6: #000000;
   --text-color-1: rgb(255, 255, 255);
   --text-color-2: rgb(190, 190, 190);
   --text-color-3: rgb(163, 163, 163);
   --text-color-4: rgb(81, 146, 245);
   --text-color-5: rgb(129, 129, 129);
-  --button-color-1: linear-gradient(90deg, rgba(126,18,241,1) 45%, rgba(153,57,255,1) 70%, rgba(238,29,232,1) 100%);
+  --button-color-1: linear-gradient(90deg, rgba(126,18,241,1) 45%, rgba(238,29,232,1) 100%);
+}
+
+[data-theme='lavender']{
+  --bg-color-1: #7B2CBF;
+  --bg-color-2: #5A189A;
+  --bg-color-3: #9D4EDD;
+  --bg-color-4: rgb(241, 18, 204);
+  --bg-color-5: rgb(238, 29, 127); 
+  --bg-color-6: #000000; 
+  --text-color-1: rgb(255, 255, 255);
+  --text-color-2: rgb(223, 223, 223);
+  --text-color-3: rgb(226, 225, 225);
+  --text-color-4: rgb(81, 146, 245);
+  --text-color-5: rgb(218, 218, 218);
+  --button-color-1: linear-gradient(90deg, rgb(241, 18, 204) 45%, rgb(238, 29, 127) 100%);
+}
+
+[data-theme='sunrise']{
+  --bg-color-1: #F4845F;
+  --bg-color-2: #F79D65;
+  --bg-color-3: #F7B267;
+  --bg-color-4: #F27059;
+  --bg-color-5: #F25C54; 
+  --bg-color-6: #000000; 
+  --text-color-1: rgb(0, 0, 0);
+  --text-color-2: rgb(36, 36, 36);
+  --text-color-3: rgb(53, 53, 53);
+  --text-color-4: rgb(81, 146, 245);
+  --text-color-5: rgb(73, 73, 73);
+  --button-color-1: linear-gradient(90deg, var(--bg-color-4) 45%, var(--bg-color-5) 100%);
+}
+
+[data-theme='midnight']{
+  --bg-color-1: #090866;
+  --bg-color-2: #010046;
+  --bg-color-3: #2130b6;
+  --bg-color-4: rgb(18, 107, 241);
+  --bg-color-5: rgb(29, 238, 238); 
+  --bg-color-6: #000000; 
+  --text-color-1: rgb(255, 255, 255);
+  --text-color-2: rgb(223, 223, 223);
+  --text-color-3: rgb(226, 225, 225);
+  --text-color-4: rgb(81, 146, 245);
+  --text-color-5: rgb(218, 218, 218);
+  --button-color-1: linear-gradient(90deg, rgb(18, 107, 241) 45%, rgb(29, 238, 238) 100%);
 }
 
 body{
@@ -25,9 +71,47 @@ body{
   align-items: center;
   width: 100%;
   height: 100vh;
+  position: relative;
+  overflow: hidden;
+}
 
-  background-color: #000000;
-  background-image: url("https://www.transparenttextures.com/patterns/axiom-pattern.png");
+.body-background{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  background-color: var(--bg-color-6);
+  overflow: hidden;
+
+}
+
+.body-bg-shape:first-of-type{
+  position: absolute;
+  bottom: -10%;
+  left: -10%;
+  width: 50%;
+  height: 70%;
+  background-color: var(--bg-color-4);
+  border-radius: 50%;
+  transform: rotate(-45deg);
+  filter: blur(100px);
+}
+
+.body-bg-shape:last-of-type{
+  position: absolute;
+  top: -10%;
+  right: -10%;
+  width: 50%;
+  height: 80%;
+  background-color: var(--bg-color-5);
+  border-radius: 50%;
+  filter: blur(100px);
+}
+
+input::placeholder{
+  color: var(--text-color-2);
 }
 
 /* ------------------- Form and Register Page ------------------- */
@@ -114,7 +198,6 @@ body{
   width: 1000px;
   height: 70vh;
   display: flex;
-  border-radius: 15px;
   margin: 16px;
   position: relative;
 }
@@ -122,7 +205,6 @@ body{
 .container-left{
   flex: 1;
   background-color: var(--bg-color-1);
-  border-radius: 15px 0 0 15px;
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -131,7 +213,6 @@ body{
 .container-right{
   flex: 2;
   background-color: var(--bg-color-2);
-  border-radius: 0 15px 15px 0;
   height: 100%;
 }
 
@@ -334,7 +415,7 @@ body{
   display: flex;
   align-items: center;
   padding-left: 16px;
-  gap: 10px;
+  gap: 20px;
 }
 
 .active-chat-header-info > svg{
@@ -345,7 +426,7 @@ body{
 
 .active-chat-header-info > div{
   display: flex;
-  gap: 20px;
+  gap: 10px;
   align-items: center;
   cursor: pointer;
 }
@@ -357,9 +438,14 @@ body{
   border-radius: 50%;
 }
 
-.active-chat-header-info > div > h2{
+.active-chat-header-info > div > div> h2{
   color: var(--text-color-1);
   font-size: 18px;
+}
+
+.active-chat-header-info > div > div> p{
+  color: var(--text-color-5);
+  font-size: 14px;
 }
 
 .active-chat-header-info > div:hover + .active-chat-header-info > div > h2{
@@ -672,4 +758,171 @@ body{
   height: 100px;
   object-fit: cover;
   border-radius: 50%;
+}
+
+/* ------------------- Settings-header ------------------- */
+
+.settings-container{
+  width: 1000px;
+  height: 70vh;
+  display: flex;
+  flex-direction: column;
+  margin: 16px;
+  position: relative;
+  background-color: var(--bg-color-2);
+}
+
+.settings-header{
+  display: flex;
+  gap: 20px;
+  padding: 16px;
+  align-items: center;
+  height: 60px;
+  background-color: var(--bg-color-1);
+}
+
+.settings-header svg, .settings-header h2{
+  color: var(--text-color-1);
+  font-size: 20px;
+}
+
+.settings-header > svg{
+  cursor: pointer;
+}
+
+.settings-header > div{
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+/* ------------------- Settings Content ------------------- */
+
+.settings-content{
+  display: flex;
+  height: 100%;
+}
+
+.settings-nav-container{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: var(--bg-color-1);
+}
+
+.settings-nav-links{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+}
+
+.settings-nav-links > li {
+  padding: 32px 16px;
+  font-size: 20px;
+  color: var(--text-color-1);
+  border-bottom: 2px solid var(--bg-color-3);
+  cursor: pointer;
+  font-weight: 400;
+}
+
+.settings-nav-links > .settings-active{
+  background-color: var(--bg-color-2);
+}
+
+.settings-nav-container > button{
+  cursor: pointer;
+  margin: 16px;
+  padding: 16px 8px;
+  font-size: 16px;
+  background-image: var(--button-color-1);
+  color: var(--text-color-1);
+  border: none;
+}
+
+/* ------------------- User Settings ------------------- */
+
+.user-setting-container, .app-setting-container{
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  padding: 16px;
+  gap: 16px;
+}
+
+.setting-content-header{
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  margin-bottom: 24px;
+}
+
+.setting-content-header > h2, .setting-content-header > svg{
+  font-size: 24px;
+  color: var(--text-color-1);
+}
+
+.user-setting-container > form{
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.user-setting-container > form > label {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.user-setting-container > form > label >span{
+  color: var(--text-color-2);
+}
+
+.user-setting-container > form > label > input[type='text']{
+  background-color: var(--bg-color-3);
+  color: var(--text-color-1);
+  padding: 16px 8px;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+.user-setting-container > form > input[type='text']{
+  background-color: var(--bg-color-3);
+  color: var(--text-color-1);
+  padding: 16px 8px;
+  border: none;
+  outline: none;
+}
+
+.user-setting-container > form > input[type='submit']{
+  background-image: var(--button-color-1);
+  color: var(--text-color-1);
+  border: none;
+  padding: 16px;
+  align-self: flex-end;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.app-setting-grid{
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  gap: 16px;
+}
+
+.app-setting-grid > li{
+  background-color: var(--bg-color-3);
+  color: var(--text-color-2);
+  font-size: 20px;
+  padding: 16px;
+  cursor: pointer;
+  text-transform: capitalize;
+}
+
+.app-setting-grid > .active-theme{
+  border: 1px solid var(--text-color-3);
 }
