--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
   --text-color-2: rgb(190, 190, 190);
   --text-color-3: rgb(163, 163, 163);
   --text-color-4: rgb(81, 146, 245);
-  --text-color-5: rgb(129, 129, 129);
+  --text-color-5: rgb(151, 151, 151);
   --button-color-1: linear-gradient(90deg, rgba(126,18,241,1) 45%, rgba(238,29,232,1) 100%);
 }
 
@@ -31,7 +31,7 @@
   --text-color-2: rgb(223, 223, 223);
   --text-color-3: rgb(226, 225, 225);
   --text-color-4: rgb(81, 146, 245);
-  --text-color-5: rgb(218, 218, 218);
+  --text-color-5: rgb(151, 151, 151);
   --button-color-1: linear-gradient(90deg, rgb(241, 18, 204) 45%, rgb(238, 29, 127) 100%);
 }
 
@@ -39,8 +39,8 @@
   --bg-color-1: #F4845F;
   --bg-color-2: #F79D65;
   --bg-color-3: #F7B267;
-  --bg-color-4: #F27059;
-  --bg-color-5: #F25C54; 
+  --bg-color-5: #f2d659;
+  --bg-color-4: #f15353; 
   --bg-color-6: #000000; 
   --text-color-1: rgb(0, 0, 0);
   --text-color-2: rgb(36, 36, 36);
@@ -51,9 +51,9 @@
 }
 
 [data-theme='midnight']{
-  --bg-color-1: #090866;
-  --bg-color-2: #010046;
-  --bg-color-3: #2130b6;
+  --bg-color-1: #1e1c6b;
+  --bg-color-2: #100f47;
+  --bg-color-3: #3441b8;
   --bg-color-4: rgb(18, 107, 241);
   --bg-color-5: rgb(29, 238, 238); 
   --bg-color-6: #000000; 
@@ -61,17 +61,20 @@
   --text-color-2: rgb(223, 223, 223);
   --text-color-3: rgb(226, 225, 225);
   --text-color-4: rgb(81, 146, 245);
-  --text-color-5: rgb(218, 218, 218);
-  --button-color-1: linear-gradient(90deg, rgb(18, 107, 241) 45%, rgb(29, 238, 238) 100%);
+  --text-color-5: rgb(151, 151, 151);
+  --button-color-1: linear-gradient(90deg, rgb(18, 107, 241) 45%, rgb(1, 204, 204) 100%);
 }
 
 body{
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 100%;
   height: 100vh;
   position: relative;
+  overflow: hidden;
+}
+
+#root{
+  width: 100%;
+  height: 100%;
   overflow: hidden;
 }
 
@@ -112,6 +115,29 @@ body{
 
 input::placeholder{
   color: var(--text-color-2);
+}
+
+.body-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  overflow: hidden;
+}
+
+/* ------------------- Form and Register Page ------------------- */
+
+header{
+  width: 100%;
+  height: 60px;
+  padding: 32px;
+}
+
+header > a{
+  color: var(--text-color-1);
+  font-weight: bold;
+  text-decoration: none;
+  font-size: 40px;
 }
 
 /* ------------------- Form and Register Page ------------------- */
@@ -207,6 +233,7 @@ input::placeholder{
   background-color: var(--bg-color-1);
   display: flex;
   flex-direction: column;
+  border-radius: 10px 0 0 10px;
   height: 100%;
 }
 
@@ -214,6 +241,7 @@ input::placeholder{
   flex: 2;
   background-color: var(--bg-color-2);
   height: 100%;
+  border-radius: 0 10px 10px 0;
 }
 
 .empty-chat-container{
@@ -284,6 +312,7 @@ input::placeholder{
   box-shadow: 1px 1px 5px rgb(36, 36, 36);
   border-radius: 3px;
   z-index: 1;
+  transition: opacity 0.3s ease-in-out;
 }
 
 .more-detail-options{
@@ -393,6 +422,10 @@ input::placeholder{
   margin-left: 5px;
 }
 
+.unseen{
+  background-color: var(--bg-color-4);
+}
+
 /* ------------------- Active Chat ------------------- */
 
 .active-chat-container{
@@ -446,6 +479,7 @@ input::placeholder{
 .active-chat-header-info > div > div> p{
   color: var(--text-color-5);
   font-size: 14px;
+  text-overflow: ellipsis;
 }
 
 .active-chat-header-info > div:hover + .active-chat-header-info > div > h2{
@@ -491,6 +525,7 @@ input::placeholder{
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
+  border-bottom: 2px solid var(--bg-color-3);
 }
 
 .active-chat-message{
@@ -513,10 +548,10 @@ input::placeholder{
 }
 
 .active-chat-message-info > p:first-of-type{
-  color: var(--text-color-1);
   background-color: var(--bg-color-3);
-  padding: 16px;
   border-radius: 10px 10px 10px 0;
+  padding: 16px;
+  color: var(--text-color-1);
   font-size: 16px;
 }
 
@@ -770,6 +805,8 @@ input::placeholder{
   margin: 16px;
   position: relative;
   background-color: var(--bg-color-2);
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 .settings-header{
@@ -839,6 +876,7 @@ input::placeholder{
   background-image: var(--button-color-1);
   color: var(--text-color-1);
   border: none;
+  border-radius: 5px;
 }
 
 /* ------------------- User Settings ------------------- */
@@ -921,6 +959,7 @@ input::placeholder{
   padding: 16px;
   cursor: pointer;
   text-transform: capitalize;
+  border-radius: 5px;
 }
 
 .app-setting-grid > .active-theme{
