--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,8 @@
   --text-color-3: rgb(163, 163, 163);
   --text-color-4: rgb(81, 146, 245);
   --text-color-5: rgb(151, 151, 151);
-  --button-color-1: linear-gradient(90deg, rgba(126,18,241,1) 45%, rgba(238,29,232,1) 100%);
+  --button-color-1: linear-gradient(90deg, var(--bg-color-4) 45%, var(--bg-color-5) 100%);
+  --button-shadow: var(--bg-color-2);
 }
 
 [data-theme='lavender']{
@@ -31,16 +32,17 @@
   --text-color-2: rgb(223, 223, 223);
   --text-color-3: rgb(226, 225, 225);
   --text-color-4: rgb(81, 146, 245);
-  --text-color-5: rgb(151, 151, 151);
-  --button-color-1: linear-gradient(90deg, rgb(241, 18, 204) 45%, rgb(238, 29, 127) 100%);
+  --text-color-5: rgb(185, 185, 185);
+  --button-color-1: linear-gradient(90deg, var(--bg-color-4) 45%, var(--bg-color-5) 100%);
+  --button-shadow: var(--bg-color-2);
 }
 
 [data-theme='sunrise']{
-  --bg-color-1: #F4845F;
-  --bg-color-2: #F79D65;
+  --bg-color-1: #F79D65;
+  --bg-color-2: #F4845F;
   --bg-color-3: #F7B267;
-  --bg-color-5: #f2d659;
-  --bg-color-4: #f15353; 
+  --bg-color-5: #e3f259;
+  --bg-color-4: #f7ae5b; 
   --bg-color-6: #000000; 
   --text-color-1: rgb(0, 0, 0);
   --text-color-2: rgb(36, 36, 36);
@@ -48,12 +50,13 @@
   --text-color-4: rgb(81, 146, 245);
   --text-color-5: rgb(73, 73, 73);
   --button-color-1: linear-gradient(90deg, var(--bg-color-4) 45%, var(--bg-color-5) 100%);
+  --button-shadow: var(--bg-color-2);
 }
 
 [data-theme='midnight']{
-  --bg-color-1: #1e1c6b;
-  --bg-color-2: #100f47;
-  --bg-color-3: #3441b8;
+  --bg-color-1: #2E236C;
+  --bg-color-2: #17153B;
+  --bg-color-3: #433D8B;
   --bg-color-4: rgb(18, 107, 241);
   --bg-color-5: rgb(29, 238, 238); 
   --bg-color-6: #000000; 
@@ -62,7 +65,40 @@
   --text-color-3: rgb(226, 225, 225);
   --text-color-4: rgb(81, 146, 245);
   --text-color-5: rgb(151, 151, 151);
-  --button-color-1: linear-gradient(90deg, rgb(18, 107, 241) 45%, rgb(1, 204, 204) 100%);
+  --button-color-1: linear-gradient(90deg, var(--bg-color-4) 45%, var(--bg-color-5) 100%);
+  --button-shadow: var(--bg-color-2);
+}
+
+[data-theme='coffee']{
+  --bg-color-1: #6b5140;
+  --bg-color-2: #493628;
+  --bg-color-3: #a88367;
+  --bg-color-4: #d18c0d; 
+  --bg-color-5: #e9c601;
+  --bg-color-6: #000000; 
+  --text-color-1: rgb(255, 255, 255);
+  --text-color-2: rgb(223, 223, 223);
+  --text-color-3: rgb(226, 225, 225);
+  --text-color-4: rgb(81, 146, 245);
+  --text-color-5: rgb(202, 202, 202);
+  --button-color-1: linear-gradient(90deg, var(--bg-color-4) 45%, var(--bg-color-5) 100%);
+  --button-shadow: var(--bg-color-2);
+}
+
+[data-theme='vanilla']{
+  --bg-color-1: #F1F0E8;
+  --bg-color-2: #E5E1DA;
+  --bg-color-3: #B3C8CF;
+  --bg-color-4: #8fddfa; 
+  --bg-color-5: #8eb0dd;
+  --bg-color-6: #000000; 
+  --text-color-1: rgb(0, 0, 0);
+  --text-color-2: rgb(36, 36, 36);
+  --text-color-3: rgb(53, 53, 53);
+  --text-color-4: rgb(81, 146, 245);
+  --text-color-5: rgb(73, 73, 73);
+  --button-color-1: linear-gradient(90deg, var(--bg-color-4) 45%, var(--bg-color-5) 100%);
+  --button-shadow: var(--bg-color-2);
 }
 
 body{
@@ -99,7 +135,7 @@ body{
   background-color: var(--bg-color-4);
   border-radius: 50%;
   transform: rotate(-45deg);
-  filter: blur(100px);
+  filter: blur(50px);
 }
 
 .body-bg-shape:last-of-type{
@@ -107,10 +143,10 @@ body{
   top: -10%;
   right: -10%;
   width: 50%;
-  height: 80%;
+  height: 90%;
   background-color: var(--bg-color-5);
   border-radius: 50%;
-  filter: blur(100px);
+  filter: blur(50px);
 }
 
 input::placeholder{
@@ -134,7 +170,7 @@ header{
 }
 
 header > a{
-  color: var(--text-color-1);
+  color: #fff;
   font-weight: bold;
   text-decoration: none;
   font-size: 40px;
@@ -227,6 +263,7 @@ header > a{
   margin: 16px;
   position: relative;
   overflow: hidden;
+  border-radius: 10px;
 }
 
 .container-left{
@@ -338,6 +375,7 @@ header > a{
   border-radius: 3px;
   z-index: 1;
   transition: opacity 0.3s ease-in-out;
+  border-radius: 5px 0 5px 5px;
 }
 
 .more-detail-options{
@@ -405,11 +443,11 @@ header > a{
   flex: 1;
   padding: 0 0 16px 0;
   overflow-y: scroll;
+  margin-top: 16px;
 }
 
 .chat-list-container::-webkit-scrollbar{
   width: 0;
-
 }
 
 .chat-list-item{
@@ -427,19 +465,20 @@ header > a{
 
 
 .chat-list-item > div > h2{
-  color: var(--text-color-1);
+  color: var(--text-color-2);
   font-size: 18px;
 }
 
 .chat-list-item > div > p{
   color: var(--text-color-2);
   font-size: 16px;
+  margin-left: 5px;
 }
 
 .chat-list-item > div > p > span{
   color: var(--text-color-5);
   font-size: 12px;
-  margin-left: 5px;
+  margin-left: 8px;
 }
 
 .unseen{
@@ -503,7 +542,7 @@ header > a{
 .active-chat-header > div:last-of-type{
   padding-right: 16px;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
 }
 
 .active-chat-header > div:last-of-type > button{
@@ -512,6 +551,8 @@ header > a{
   border: none;
   border-radius: 50%;
   background-color: transparent;
+  display: flex;
+  align-items: flex-end;
 }
 
 .active-chat-header > div:last-of-type > button:disabled{
@@ -557,7 +598,7 @@ header > a{
 .active-chat-message-info > p:first-of-type{
   background-color: var(--bg-color-3);
   border-radius: 10px 10px 10px 0;
-  padding: 16px;
+  padding: 16px 24px;
   color: var(--text-color-1);
   font-size: 16px;
 }
@@ -641,7 +682,7 @@ header > a{
   width: 45px;
   height: 45px;
   border-radius: 50%;
-  box-shadow: 5px 5px 50px 10px rgba(0, 0, 0, 0.61);
+  box-shadow: 5px 5px 50px 10px var(--button-shadow);
 }
 
 .active-chat-input-container > form > label > div > svg{
@@ -958,7 +999,7 @@ header > a{
   background-color: var(--bg-color-3);
   color: var(--text-color-2);
   font-size: 20px;
-  padding: 16px;
+  padding: 16px 32px;
   cursor: pointer;
   text-transform: capitalize;
   border-radius: 5px;
@@ -975,6 +1016,14 @@ header > a{
 }
 
 @media screen and (max-width: 768px) {
+  .picker > aside{
+    position: absolute;
+    top: -450px;
+    right: -70px;  
+    width: 300px !important;
+    z-index: 3;
+  }
+
   .container{
     width: 100%;
   }
@@ -990,7 +1039,7 @@ header > a{
   }
 
   .container-right{
-    margin-left: 16px;
+    margin-left: 20px;
   }
 
   .empty-chat-container > h1 {
@@ -1012,6 +1061,10 @@ header > a{
   .settings-nav-links > li{
     border-bottom: none;
     border-right: 2px solid var(--bg-color-3);
+  }
+
+  .active-chat-header-info{
+    gap: 10px;
   }
 }
 
