--- a/src/App.css
+++ b/src/App.css
@@ -267,8 +267,7 @@ header > a{
 }
 
 .container-left{
-  /* width: 0.5; */
-  flex: 1;
+  width: 30%;
   background-color: var(--bg-color-1);
   display: flex;
   flex-direction: column;
@@ -278,7 +277,7 @@ header > a{
 }
 
 .container-right{
-  flex: 2;
+  width: 70%;
   background-color: var(--bg-color-2);
   height: 100%;
   border-radius: 0 10px 10px 0;
@@ -304,7 +303,7 @@ header > a{
 .container-left > button{
   position: absolute;
   top: 0;
-  right: -26px;
+  right: 0;
   display: none; 
   border: none;
   border-left: 2px solid var(--bg-color-3);
@@ -446,7 +445,8 @@ header > a{
 /* ------------------- Chat List ------------------- */
 
 .chat-list-container{
-  flex: 1;
+  height: 100%;
+  width: 100%;
   padding: 0 0 16px 0;
   overflow-y: scroll;
   margin-top: 16px;
@@ -464,7 +464,6 @@ header > a{
   align-items: center;
   gap: 20px;
   padding: 16px;
-  flex-grow: 0;
   cursor: pointer;
   border-bottom: 2px solid var(--bg-color-3);
   width: 100%;
@@ -476,7 +475,9 @@ header > a{
 }
 
 .chat-list-item > div{
-  flex: 1;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .chat-list-item > div > h2{
@@ -487,7 +488,8 @@ header > a{
 .chat-list-item > div > div{
   display: flex;
   align-items: center;
-  /* flex: 1; */
+  width: 100%;
+  flex: 0;
 }
 
 .chat-list-item > div > div > p{
@@ -499,7 +501,7 @@ header > a{
   line-clamp: 1;
   -webkit-line-clamp: 1; 
   -webkit-box-orient: vertical;
-  max-width: 125px;
+  max-width: 50%;
 }
 
 .chat-list-item > div > div > span{
@@ -606,11 +608,12 @@ header > a{
 
 
 .active-chat-messages-container{
-  flex: 1;
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
   border-bottom: 2px solid var(--bg-color-3);
+  width: 100%;
+  height: 100%;
 }
 
 .active-chat-message{
@@ -618,6 +621,7 @@ header > a{
   gap: 10px;
   padding: 16px;
   height: fit-content;
+  width: 100%;
 }
 
 .active-chat-message-img{
@@ -627,7 +631,7 @@ header > a{
 }
 
 .active-chat-message-info{
-  max-width: 300px;
+  max-width: 80%;
   display: flex;
   flex-direction: column;
 }
@@ -640,10 +644,14 @@ header > a{
   font-size: 16px;
   position: relative;
   overflow-wrap: break-word;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
 
 .active-chat-message-info > p:first-of-type > span:first-of-type{
-  font-weight: 900;
+  font-weight: bolder;
+  font-size: 18px;
 }
 
 .active-chat-message-info > p:last-of-type{
@@ -1162,6 +1170,7 @@ header > a{
     position: absolute;
     transform: translateX(-100%);
     transition: transform 0.3s ease-in-out;
+    width: 100%;
   }
 
   .container-left > button{
@@ -1169,7 +1178,9 @@ header > a{
   }
 
   .container-right{
-    margin-left: 20px;
+    position: relative;
+    width: 100%;
+    border-radius: 10px;
   }
 
   .empty-chat-container > h1 {
@@ -1229,8 +1240,12 @@ header > a{
     font-size: 12px;
   }
 
+  .active-chat-message-info{
+    /* max-width: fit-content; */
+  }
+
   .active-chat-message-info > p:first-of-type{
-    font-size: 14px;
+    font-size: 16px;
     padding: 8px 16px;
     border-radius: 5px 5px 5px 0;
   }
@@ -1245,6 +1260,10 @@ header > a{
 
   .active-chat-input > input{
     font-size: 14px;
+  }
+
+  .active-chat-input-container > form{
+    gap: 10px;
   }
 
   .active-chat-input-container > form > label{
