--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Blinker:wght@100;200;300;400;600;700;800;900&family=Montserrat:wght@400;700&family=Poppins:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amaranth:wght@400;700&family=Jura:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&family=Kanit:wght@400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Assistant:wght@200;300;400;500;600;700;800&display=swap');
+
 *{
   margin: 0;
   padding: 0;
   box-sizing:border-box ;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: Assistant, sans-serif;
 }
 
 [data-theme='carbon']{
@@ -260,10 +268,10 @@ header > a{
   width: 992px;
   height: 70vh;
   display: flex;
-  margin: 16px;
   position: relative;
-  overflow: hidden;
   border-radius: 10px;
+  overflow: hidden;
+  margin: 16px;
 }
 
 .container-left{
@@ -483,6 +491,13 @@ header > a{
 .chat-list-item > div > h2{
   color: var(--text-color-2);
   font-size: 18px;
+  max-width: 90%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  line-clamp: 1;
+  -webkit-line-clamp: 1; 
+  -webkit-box-orient: vertical;
 }
 
 .chat-list-item > div > div{
@@ -540,6 +555,7 @@ header > a{
   align-items: center;
   padding-left: 16px;
   gap: 20px;
+  width: 100%;
 }
 
 .active-chat-header-info > svg{
@@ -553,18 +569,38 @@ header > a{
   gap: 10px;
   align-items: center;
   cursor: pointer;
+  width: 100%;
+}
+
+.active-chat-header-info > div > div{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 
 .active-chat-header-info > div > div> h2{
   color: var(--text-color-1);
   font-size: 18px;
+  max-width: 80%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  line-clamp: 1;
+  -webkit-line-clamp: 1; 
+  -webkit-box-orient: vertical;
 }
 
 .active-chat-header-info > div > div> p{
   color: var(--text-color-5);
   font-size: 14px;
+  max-width: 80%;
+  overflow: hidden;
   text-overflow: ellipsis;
+  display: -webkit-box;
+  line-clamp: 1;
+  -webkit-line-clamp: 1; 
+  -webkit-box-orient: vertical;
 }
 
 .active-chat-header-info > div:hover + .active-chat-header-info > div > h2{
@@ -608,12 +644,11 @@ header > a{
 
 
 .active-chat-messages-container{
+  flex: 1;
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
   border-bottom: 2px solid var(--bg-color-3);
-  width: 100%;
-  height: 100%;
 }
 
 .active-chat-message{
@@ -622,6 +657,10 @@ header > a{
   padding: 16px;
   height: fit-content;
   width: 100%;
+}
+
+.active-chat-message:first-child{
+  margin-top: auto;
 }
 
 .active-chat-message-img{
@@ -1022,7 +1061,7 @@ header > a{
 }
 
 .settings-nav-container{
-  flex: 1;
+  width: 30%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -1063,7 +1102,7 @@ header > a{
 /* ------------------- User Settings ------------------- */
 
 .user-setting-container, .app-setting-container{
-  flex: 2;
+  width: 70%;
   display: flex;
   flex-direction: column;
   padding: 16px;
@@ -1192,7 +1231,7 @@ header > a{
   }
 
   .settings-nav-container{
-    flex: 0.5;
+    width: 30%;
   }
 
   .settings-nav-links{
@@ -1202,7 +1241,18 @@ header > a{
   .settings-nav-links > li{
     border-bottom: none;
     border-right: 2px solid var(--bg-color-3);
+    padding: 16px;
   }
+
+  .settings-nav-container{
+    width: 100%;
+    height: 10%;
+  }
+
+  .user-setting-container, .app-setting-container{
+    width: 100%;
+  }
+  
 
   .active-chat-header-info{
     gap: 10px;
@@ -1240,9 +1290,6 @@ header > a{
     font-size: 12px;
   }
 
-  .active-chat-message-info{
-    /* max-width: fit-content; */
-  }
 
   .active-chat-message-info > p:first-of-type{
     font-size: 16px;
