--- a/src/App.css
+++ b/src/App.css
@@ -202,7 +202,7 @@ header{
   position: relative;
   width: 100%;
   height: 60px;
-  padding: 32px;
+  padding: 16px 32px;
 }
 
 header > a{
@@ -294,7 +294,7 @@ header > a{
 
 .container{
   width: 992px;
-  height: 70vh;
+  height: 75vh;
   display: flex;
   position: relative;
   border-radius: 10px;
@@ -1047,7 +1047,7 @@ header > a{
 
 .settings-container{
   width: 992px;
-  height: 70vh;
+  height: 75vh;
   display: flex;
   flex-direction: column;
   margin: 16px;
@@ -1354,8 +1354,11 @@ footer > a{
 /* ------------------- Responsive Css ------------------- */
 
 @media screen and (max-width: 1024px) {
-  .container{
+  .container, .settings-container{
     width: 100%;
+  }
+  header{
+    padding: 16px;
   }
 }
 
@@ -1366,10 +1369,6 @@ footer > a{
     right: -70px;  
     width: 300px !important;
     z-index: 3;
-  }
-
-  .container{
-    width: 100%;
   }
 
   .container-left{
@@ -1431,6 +1430,11 @@ footer > a{
 }
 
 @media screen and (max-width:532px) {
+
+  header > a{
+    font-size: 32px;
+  }
+
   .form-container{
     width: 100%;
   }
